Fixed nav button names and contrast issues

--- a/ifyoubuildit/styles/site-plan.css
+++ b/ifyoubuildit/styles/site-plan.css
@@ -20,7 +20,7 @@ Fonts are separated by a | */
   --paragraph-color-on-white: #222629; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #61892F;
-  --nav-link-color: #222629;
+  --nav-link-color: white;
   --nav-background-color: #61892F;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #86C232;
